# maany-mpc-core

./: .gitignore  .gitmodules  CMakeLists.txt  CODEX.md  README.md
bindings/node/: CMakeLists.txt  README.md  addon.cc  index.d.ts  index.js  maany_mpc_node.node  package.json  tsconfig.json
bindings/rn/: MaanyMpc.podspec  README.md  package.json  tsconfig.json
bindings/rn-bare/: .npmignore  MaanyMpc.podspec  README.md  index.ts  native-artifacts.json  package.json
bindings/rn-bare/android/: build.gradle
bindings/rn-bare/android/src/main/cpp/: CMakeLists.txt  addon_jni.cpp
bindings/rn-bare/android/src/main/java/com/maany/mpc/: MaanyMpcModule.java  MaanyMpcPackage.java
bindings/rn-bare/ios/: MaanyMpc.mm  MaanyMpc.podspec
bindings/rn-bare/ios/cpp/: MaanyMpcHostObject.cpp  MaanyMpcHostObject.h
bindings/rn-bare/ios/cpp/include/: bridge.h
bindings/rn-bare/scripts/: fetch-native-artifacts.cjs
bindings/rn/android/: build.gradle
bindings/rn/android/src/main/: AndroidManifest.xml
bindings/rn/android/src/main/cpp/: CMakeLists.txt
bindings/rn/android/src/main/java/com/maany/mpc/: MaanyMpcModule.java
bindings/rn/cpp/: MaanyMpcHostObject.cpp
bindings/rn/ios/: MaanyMpc.mm  MaanyMpc.podspec
bindings/rn/ios/cpp/: MaanyMpcHostObject.cpp
cpp/include/: bridge.h  maany_mpc.h
cpp/src/: bridge.cpp  maany_mpc.cc
examples/node-coordinator-server/: README.md  package.json  server.js
scripts/: README.md  build_android_openssl.sh  build_ios_core.sh
tests/cpp/: dkg_roundtrip.cpp
tests/node/: package-lock.json  package.json  roundtrip-coordinator.js  roundtrip.js
